--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <p>スマホなどで写真を撮影し、その画像を表示するページを作成すること</p>
     <p>写真からどこかのページへリンクを張ること</p>
     <p>Markup Validation Service で作成したページに問題がないか確認すること</p>
-  <p>https://github.com/shioncolor/web1-4/blob/master/Cut-Microbe-2015-handcut-paper.jpg</p>
+ <img src=“ Z:\Desktop\ごちゃごちゃ” />
+
   </section>
 </body>
 </html>
