--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>写真からどこかのページへリンクを張ること</p>
     <p>Markup Validation Service で作成したページに問題がないか確認すること</p>
  <img src=“2247168.jpg”alt=“なぞの女”/>
-
+<a href=“http://www.t-kougei.ac.jp/index.html”>
   </section>
 </body>
 </html>
