--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>スマホなどで写真を撮影し、その画像を表示するページを作成すること</p>
     <p>写真からどこかのページへリンクを張ること</p>
     <p>Markup Validation Service で作成したページに問題がないか確認すること</p>
-    <p><a href="http://www.t-kougei.ac.jp/index.html">img src="2247168.jpg"</a>へのリンク</p>
+    <p><a href="http://www.t-kougei.ac.jp/index.html"><img src="2247168.jpg"></a>へのリンク</p>
   </section>
 </body>
 </html>
